# switchboard-plug-inputmethod

./: .travis.yml  README.md  config.vala.in  meson.build
.github/workflows/: main.yml
data/: io.elementary.switchboard.inputmethod.appdata.xml.in  meson.build
debian/: changelog  control  copyright
meson/: post_install.py
po/: POTFILES  README.md  es.po  inputmethod-plug.pot  ja.po  meson.build
po/extra/: POTFILES  es.po  extra.pot  ja.po
src/: AddEnginesList.vala  InputMethod.vala  Plug.vala  Utils.vala
src/Dialogs/: InstallEngineDialog.vala  ProgressDialog.vala
src/Installer/: InstallList.vala  UbuntuInstaller.vala
src/Views/: EnginesListView.vala  EnginesRow.vala  InputMethodListView.vala  LanguagesRow.vala  MainView.vala  SettingsView.vala
src/Widgets/: AddEnginesPopover.vala  AddIMPopover.vala  InstallEngineDialog.vala
